Updated documentation, cleaned folder structure - support for adding evidence to badge assertion, password required to issue badges

--- a/google/ui.html
+++ b/google/ui.html
@@ -96,6 +96,8 @@ to qualify for this badge</span>
       <span>Date the badge assertion is valid until. (revokation not currently supported)</span>
       <span id="assertion-expiration-error" class="error-msg"></span>
     </fieldset>
+    <label for="password">Password</label>
+    <input type="password" id="password" name="password" required>
     
     <button id="issue" type="submit" form="badge-form">Issue Badges</button>
   </form>
